--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
     <main>
-       
+       <div class="items-container"></div>
 
 
 
@@ -90,7 +90,29 @@
             © 2023 www.myntra.com. All rights reserved.
         </div>
     </footer>
-    <script src="data/items.js"></script>
+    <script src="data/item.js"></script>
     <script src="javascripts/index.js"></script>
 </body>
 </html>
+
+
+<!-- <div class="item_-container">
+    <img src="images/2.jpg" alt="image two">
+    <div class="rating">4.2</div>
+    <div class="company-name">
+
+    </div>
+    <div class="item-name">${item.item_name}</div>
+    <div class="price">
+        <span class="current-price">$${item.current_price}</span>
+        <br>
+        <span class="orignal price">${item.original_price}</span>
+        <br>
+        <span class="Discount">${item.discount_price}% Discount price </span>
+    </div> -->
+    
+
+
+
+
+</div>
