--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <title>Myntra Functional Clone</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/bag.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <header>
+    <header>   
         <div class="logo_container">
             <a href="#"><img class="myntra_home" src="images/myntra_logo.webp" alt="Myntra Home"></a>
         </div>
@@ -37,6 +38,7 @@
                 <span class="material-symbols-outlined action_icon">shopping_bag</span>
                 <span class="action_name">Bag</span>
                 <span class="bag-item-count">0</span>
+                <span class="bag-item-count"></span>
             </a>
         </div>
     </header>
@@ -95,24 +97,3 @@
 </body>
 </html>
 
-
-<!-- <div class="item_-container">
-    <img src="images/2.jpg" alt="image two">
-    <div class="rating">4.2</div>
-    <div class="company-name">
-
-    </div>
-    <div class="item-name">${item.item_name}</div>
-    <div class="price">
-        <span class="current-price">$${item.current_price}</span>
-        <br>
-        <span class="orignal price">${item.original_price}</span>
-        <br>
-        <span class="Discount">${item.discount_price}% Discount price </span>
-    </div> -->
-    
-
-
-
-
-</div>
