completed myntra clone
completed myntra clone

--- a/bag.html
+++ b/bag.html
@@ -81,7 +81,7 @@
 
         </div>
         <div class="bag-summary">
-          <div class="bag-details-container">
+          <!-- <div class="bag-details-container">
             <div class="price-header">PRICE DETAILS (2 Items) </div>
             <div class="price-item">
               <span class="price-item-tag">Total MRP</span>
@@ -102,7 +102,7 @@
             </div>
           </div>
           <button class="btn-place-order">
-            <div class="css-xjhrni">PLACE ORDER</div>
+            <div class="css-xjhrni">PLACE ORDER</div> -->
             
           </button>
           <!-- <p class="orderabout" hidden>congo order placed </p> -->
